Updated after 4/7 class (part 2)