@@ -59,3 +59,15 @@ task runWagonGame(type:JavaExec) {
     group 'javafx programs'
     standardInput = System.in
 }
+
+task runMuffinClicker(type:JavaExec) {
+    main = "edu.realemj.Exercises14.MuffinClicker"
+    classpath = sourceSets.main.runtimeClasspath
+    jvmArgs = [ '--module-path', classpath.asPath,
+                '--add-modules', 'javafx.controls',
+                '--add-modules', 'javafx.fxml'
+    ]
+    dependsOn 'classes'
+    group 'javafx programs'
+    standardInput = System.in
+}
